Write initial header CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <ul>
             <li class="logo">Header Logo</li>
-            <li><a href="#">link 01</a></li>
+            <li class="push-right"><a href="#">link 01</a></li>
             <li><a href="#">link 02</a></li>
             <li><a href="#">link 03</a></li>
         </ul>
