Add hero and info to index.html, README credits

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
             <button>Sign up</button>
         </div>
         <div>
-            <img src="" alt="hero placeholder image">
+            <img class="hero-img" src="images/fox.jpg" alt="hero placeholder image">
         </div>
     </section>
     <section class="info">
         <h2>Some random information.</h2>
         <div class="card-container">
             <div class="card">
-                <img src="" alt="card placeholder image">
+                <img src="images/cervo.jpg" alt="card placeholder image">
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id eaque maiores!</div>
             </div>
             <div class="card">
-                <img src="" alt="card placeholder image">
+                <img src="images/fox.jpg" alt="card placeholder image">
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id eaque maiores!</div>
             </div>
             <div class="card">
-                <img src="" alt="card placeholder image">
+                <img src="images/passaro.jpg" alt="card placeholder image">
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id eaque maiores!</div>
             </div>
             <div class="card">
-                <img src="" alt="card placeholder image">
+                <img src="images/pomba.jpg" alt="card placeholder image">
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id eaque maiores!</div>
             </div>
         </div>
