Add quote and call-to-action to index.html

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
         </div>
     </section>
     <section class="quote">
-        <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure repudiandae explicabo dicta veniam obcaecati cupiditate, nobis delectus fugit quis dolor, id non dolorem atque quo aperiam?</blockquote>
-        <p>-Quote author</p>
+        <div class="quote-container">
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure repudiandae explicabo dicta veniam obcaecati cupiditate, nobis delectus fugit quis dolor, id non dolorem atque quo aperiam?</blockquote>
+            <p>-Quote author</p>
+        </div>
     </section>
     <section class="call-to-action">
         <div>
             <h3>Call to action!</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis impedit iusto nesciunt. Expedita, quam!</p>
         </div>
-        <div>
-            <button>Sign up</button>
-        </div>
+        <button>Sign up</button>
     </section>
     <footer>
         <p>Copyright Lorem ipsum dolor sit amet consectetur.</p>
